#tips-page-full

--- a/tip.html
+++ b/tip.html
@@ -69,33 +69,33 @@
 							</button>
 							<ul class="main-nav__list main-nav__list--film">
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="#" target="_self">Трейлер</a>
+									<a class="main-nav__link main-nav__link--film" href="#" target="_self">Трейлер</a>
 								</li>
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="#" target="_self">Видео</a>
+									<a class="main-nav__link main-nav__link--film" href="#" target="_self">Видео</a>
 								</li>
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="#" target="_self">Персонажи</a>
+									<a class="main-nav__link main-nav__link--film" href="#" target="_self">Персонажи</a>
 								</li>
 							</ul>
 						</div>
 						<!--Блок кнопки и списка "Конкурс"-->
 						<div class="main-nav__wrapper main-nav__wrapper--event">
 							<button class="main-nav__btn main-nav__btn--event" type="button">
-								<span class="main-nav__text">Фильм</span>
+								<span class="main-nav__text">Конкурс</span>
 							</button>
 							<ul class="main-nav__list main-nav__list--event">
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="#" target="_self">Как участвовать?</a>
+									<a class="main-nav__link main-nav__link--event" href="#" target="_self">Как участвовать?</a>
 								</li>
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="#" target="_self">Призы</a>
+									<a class="main-nav__link main-nav__link--event" href="#" target="_self">Призы</a>
 								</li>
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="#" target="_self">Правила</a>
+									<a class="main-nav__link main-nav__link--event" href="#" target="_self">Правила</a>
 								</li>
 								<li class="main-nav__item">
-									<a class="main-nav__link" href="gallery.html" target="_self">Галерея работ</a>
+									<a class="main-nav__link main-nav__link--event" href="gallery.html" target="_self">Галерея работ</a>
 								</li>
 							</ul>
 						</div>
@@ -112,6 +112,7 @@
 							</picture>
 							<b class="main-cabinet__name">Анатолий М.</b>
 						</div>
+						<!--Выдвигающийся список-->
 						<ul class="main-cabinet__result cabinet-result">
 							<li class="cabinet-result__item cabinet-result__item--first">
 								<!--Base image for uncaught symbol-->
@@ -128,61 +129,61 @@
 							<li class="cabinet-result__item cabinet-result__item--second">
 								<!--Base image for uncaught symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--empty">
-									<source srcset="img/empty-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+									<source srcset="img/empty-2.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-2.png" alt="Неопознанная панда" />
 								</picture>
 								<!--Image for correctly taken symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-									<source srcset="img/full-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+									<source srcset="img/full-2.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-2.png" alt="Опознанная панда" />
 								</picture>
 							</li>
 							<li class="cabinet-result__item cabinet-result__item--third">
 								<!--Base image for uncaught symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--empty">
-									<source srcset="img/empty-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+									<source srcset="img/empty-3.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-3.png" alt="Неопознанная панда" />
 								</picture>
 								<!--Image for correctly taken symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-									<source srcset="img/full-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+									<source srcset="img/full-3.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-3.png" alt="Опознанная панда" />
 								</picture>
 							</li>
 							<li class="cabinet-result__item cabinet-result__item--fourth">
 								<!--Base image for uncaught symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--empty">
-									<source srcset="img/empty-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+									<source srcset="img/empty-4.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-4.png" alt="Неопознанная панда" />
 								</picture>
 								<!--Image for correctly taken symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-									<source srcset="img/full-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+									<source srcset="img/full-4.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-4.png" alt="Опознанная панда" />
 								</picture>
 							</li>
 							<li class="cabinet-result__item cabinet-result__item--fifth">
 								<!--Base image for uncaught symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--empty">
-									<source srcset="img/empty-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+									<source srcset="img/empty-5.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-5.png" alt="Неопознанная панда" />
 								</picture>
 								<!--Image for correctly taken symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-									<source srcset="img/full-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+									<source srcset="img/full-5.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-5.png" alt="Опознанная панда" />
 								</picture>
 							</li>
 							<li class="cabinet-result__item cabinet-result__item--sixth">
 								<!--Base image for uncaught symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--empty">
-									<source srcset="img/empty-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+									<source srcset="img/empty-6.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-6.png" alt="Неопознанная панда" />
 								</picture>
 								<!--Image for correctly taken symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-									<source srcset="img/full-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+									<source srcset="img/full-6.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-6.png" alt="Опознанная панда" />
 								</picture>
 							</li>
 							<li class="cabinet-result__item cabinet-result__item--seventh">
@@ -193,22 +194,21 @@
 								</picture>
 								<!--Image for correctly taken symbol-->
 								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-									<source srcset="img/full-1.webp" type="image/webp" />
-									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+									<source srcset="img/full-7.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-7.png" alt="Опознанная панда" />
 								</picture>
 							</li>
 						</ul>
-						<!--Кнопка участия в конкурсе, когда собраны все 7 символов-->
 						<a class="main-cabinet__btn" href="event.html">
 							<span class="main-cabinet__text">Участвовать в конкурсе</span>
 						</a>
 					</div>
 				</div>
 				<!--Секция основного контента для выбора правильного контента-->
-				<section class="main__content main-content">
-					<h1 class="main-content__title main-content__title--tips">Пропустил символ? Не беда! Вопрос - это подсказка, читай внимательно и выбирай символ.</h1>
+				<section class="main__content main-content main-content--tip">
+					<h1 class="main-content__title main-content__title--tip">Пропустил символ? Не беда! Вопрос - это подсказка, читай внимательно и выбирай символ.</h1>
 					<b class="main-content__question">Это два персонажа, которые похожи друг на друга</b>
-					<div class="main-content__wrapper content-wrapper">
+					<div class="main-content__wrapper content-wrapper content-wrapper--tip">
 						<div class="content-wrapper__item content-wrapper__item--first">
 							<!--Пустой невыбранный квадрат с символом-->
 							<picture class="content-wrapper__frame content-wrapper__frame--empty">
@@ -247,37 +247,37 @@
 						</div>
 					</div>
 					<button class="main-content__submit" type="submit">Выбрать</button>
-					<!--Выдвигающаяся панель про участие-->
-					<div class="main-content__slide slide-panel">
-						<button class="open-btn" type="button"><span class="btn-span">Как участвовать</span></button>
-						<div class="top-panel">
-							<button class="top-panel__close" type="button"></button>
-							<ul class="top-panel__list panel-list">
-								<li class="panel-list__item">
-									<span class="panel-list__text">1. Смотри Nickelodeon каждый день с 9:00 до 19:00 МСК</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">2. Лови появляющиеся символы</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">3. Выбери правильные на сайте</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">4. Выиграй билеты в кино</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">5. Набери 7 символов</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">6. Нарисуй аттракцион мечты</span>
-								</li>
-								<li class="panel-list__item">
-									<span class="panel-list__text">7. Выиграй путешествие в Nickelodeon Land Madrid</span>
-								</li>
-							</ul>
-						</div>
-					</div>
 				</section>
+				<!--Выдвигающаяся панель про участие-->
+				<div class="main__slide slide-panel slide-panel--tip">
+					<button class="open-btn open-btn--tip" type="button"><span class="btn-span">Как&nbsp;участвовать</span></button>
+					<div class="top-panel top-panel--tip">
+						<button class="top-panel__close" type="button"></button>
+						<ul class="top-panel__list panel-list">
+							<li class="panel-list__item">
+								<span class="panel-list__text">1. Смотри Nickelodeon каждый день с 9:00 до 19:00 МСК</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">2. Лови появляющиеся символы</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">3. Выбери правильные на сайте</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">4. Выиграй билеты в кино</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">5. Набери 7 символов</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">6. Нарисуй аттракцион мечты</span>
+							</li>
+							<li class="panel-list__item">
+								<span class="panel-list__text">7. Выиграй путешествие в Nickelodeon Land Madrid</span>
+							</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</main>
 		<!--Page footer-->
