--- a/index.html
+++ b/index.html
@@ -31,11 +31,50 @@
 				</a>
 			</div>
 			<!--Mobile menu-->
+			<button class="header__opener" type="button"></button>
 			<nav class="header__nav header-nav">
 				<ul class="header-nav__list nav-list">
+					<!--Первая часть меню-->
+					<li class="nav-list__item nav-list__item--film">
+						<span class="nav-list__text nav-list__text--head">Фильм</span>
+					</li>
 					<li class="nav-list__item">
 						<a class="nav-list__link" href="#" target="_self">
-							<span class="nav-list__text"></span>
+							<span class="nav-list__text nav-list__text--film">Трейлер</span>
+						</a>
+					</li>
+					<li class="nav-list__item">
+						<a class="nav-list__link" href="#" target="_self">
+							<span class="nav-list__text nav-list__text--film">Видео</span>
+						</a>
+					</li>
+					<li class="nav-list__item">
+						<a class="nav-list__link" href="#" target="_self">
+							<span class="nav-list__text nav-list__text--film">Персонажи</span>
+						</a>
+					</li>
+					<!--Вторая часть меню-->
+					<li class="nav-list__item nav-list__item--event">
+						<span class="nav-list__text nav-list__text--head">Конкурс</span>
+					</li>
+					<li class="nav-list__item">
+						<a class="nav-list__link" href="#" target="_self">
+							<span class="nav-list__text nav-list__text--event">Как участвовать?</span>
+						</a>
+					</li>
+					<li class="nav-list__item">
+						<a class="nav-list__link" href="#" target="_self">
+							<span class="nav-list__text nav-list__text--event">Призы</span>
+						</a>
+					</li>
+					<li class="nav-list__item">
+						<a class="nav-list__link" href="#" target="_self">
+							<span class="nav-list__text nav-list__text--event">Правила</span>
+						</a>
+					</li>
+					<li class="nav-list__item">
+						<a class="nav-list__link" href="#" target="_self">
+							<span class="nav-list__text nav-list__text--event">Галерея работ</span>
 						</a>
 					</li>
 				</ul>
@@ -55,21 +94,154 @@
 					</a>
 				</div>
 				<!--Блок показа главного подарка, показывается всегда, кроме времени показа подсказки-->
-				<div class="sidebar__prize prize">
+				<div class="sidebar__prize prize" style="display: none;">
 					<p class="prize__description">Хочешь попасть в крутой парк аттракционов Nickelodeon Land Madrid?</p>
-					<div class="prize__frame">
-
-					</div>
+					<div class="prize__frame"></div>
 				</div>
 				<!--Блок перехода на страницу подсказки, показывается только в определенное время-->
-				<div class="sidebar__hint hint" style="display: none;">
+				<div class="sidebar__hint hint">
 					<p class="hint__description">Пропустил&nbsp;символ? Жми&nbsp;сюда,&nbsp;ответь&nbsp;на&nbsp;вопрос и получи подсказку.</p>
 					<a class="hint__link" href="tip.html" target="_self">
 						<span class="visually-hidden">Перейти</span>
 					</a>
 				</div>
+				<!--Блок кнопки входа на сайт ( только для мобильной версии )-->
+				<div class="sidebar__personal personal">
+					<button class="personal__enter" type="button" style="display: none;"></button>
+					<!--Область личного кабинета-->
+					<div class="personal__cabinet main-cabinet">
+						<!--Аватар юзера-->
+						<div class="main-cabinet__avatar">
+							<button class="main-cabinet__close" type="button"></button>
+							<picture class="main-cabinet__frame">
+								<source srcset="img/personal-photo.webp" type="image/webp" />
+								<img class="main-cabinet__photo" src="img/personal-photo.png" alt="Мой аватар" />
+							</picture>
+							<b class="main-cabinet__name">Анатолий&nbsp;М.</b>
+						</div>
+						<!--Выдвигающийся список-->
+						<div class="main-cabinet__popup">
+							<b class="main-cabinet__remain">Осталось всего<span class="main-cabinet__count">&nbsp;4&nbsp;</span>символа!</b>
+							<ul class="main-cabinet__result cabinet-result">
+							<li class="cabinet-result__item cabinet-result__item--first">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-1.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-1.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+							<li class="cabinet-result__item cabinet-result__item--second">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-2.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-2.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-2.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-2.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+							<li class="cabinet-result__item cabinet-result__item--third">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-3.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-3.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-3.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-3.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+							<li class="cabinet-result__item cabinet-result__item--fourth">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-4.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-4.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-4.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-4.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+							<li class="cabinet-result__item cabinet-result__item--fifth">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-5.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-5.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-5.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-5.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+							<li class="cabinet-result__item cabinet-result__item--sixth">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-6.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-6.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-6.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-6.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+							<li class="cabinet-result__item cabinet-result__item--seventh">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-1.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-7.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-7.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+							<li class="cabinet-result__item cabinet-result__item--eight">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-1.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-1.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+							<li class="cabinet-result__item cabinet-result__item--nine">
+								<!--Base image for uncaught symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--empty">
+									<source srcset="img/empty-1.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								</picture>
+								<!--Image for correctly taken symbol-->
+								<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
+									<source srcset="img/full-1.webp" type="image/webp" />
+									<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								</picture>
+							</li>
+						</ul>
+						</div>
+						<!--Кнопка участия в конкурсе, когда собраны все 7 символов-->
+						<a class="main-cabinet__btn" href="event.html">
+							<span class="main-cabinet__text">Участвовать в конкурсе</span>
+						</a>
+					</div>
+				</div>
 			</div>
 			<div class="main__middle">
+				<!--Скрыт для мобильных версий-->
 				<div class="main__header main-header">
 					<!--Блок кнопок-->
 					<div class="main-header__nav main-nav">
@@ -116,8 +288,8 @@
 							<span class="main-nav__text">Регистрация/Вход</span>
 						</button>
 					</div>
-					<!--Область личного кабинета-->
-					<div class="main-header__cabinet main-cabinet">
+					<!--Область личного кабинета ( включена только на десктопах )-->
+					<div class="main-header__cabinet main-cabinet" style="display: none;">
 						<!--Аватар юзера-->
 						<div class="main-cabinet__avatar">
 							<button class="main-cabinet__close" type="button"></button>
@@ -369,6 +541,10 @@
 		</main>
 		<!--Page footer-->
 		<footer class="footer">
+			<!--Блок как участвовать - только для мобильно-планшетных размеров-->
+			<div class="footer__help help-panel">
+				<button class="help-panel__btn" type="button">Как участвовать</button>
+			</div>
 			<div class="footer__wrapper">
 				<!--Copyrights-->
 				<div class="footer__copyright">
@@ -399,7 +575,35 @@
 			</div>
 		</footer>
 	</div>
-
+	<!--Попап помощи для мобильной версии-->
+	<div class="popup-help" style="display: none;">
+		<div class="popup-help__wrapper">
+			<button class="popup-help__close closer" type="button"></button>
+			<ul class="popup-help__list help-list">
+				<li class="help-list__item">
+					<span class="help-list__text">1. Смотри Nickelodeon каждый день с 9:00 до 19:00 МСК</span>
+				</li>
+				<li class="help-list__item">
+					<span class="help-list__text">2. Лови появляющиеся символы</span>
+				</li>
+				<li class="help-list__item">
+					<span class="help-list__text">3. Выбери правильные на сайте</span>
+				</li>
+				<li class="help-list__item">
+					<span class="help-list__text">4. Выиграй билеты в кино</span>
+				</li>
+				<li class="help-list__item">
+					<span class="help-list__text">5. Набери 7 символов</span>
+				</li>
+				<li class="help-list__item">
+					<span class="help-list__text">6. Нарисуй аттракцион мечты</span>
+				</li>
+				<li class="help-list__item">
+					<span class="help-list__text">7. Выиграй путешествие в Nickelodeon Land Madrid</span>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<!--Регистрационные формы-->
 	<!--Форма выбора действия - вход или регистрация-->
 	<div class="popup-enter" style="display: none;">
