--- a/gallery.html
+++ b/gallery.html
@@ -85,8 +85,8 @@
 			<div class="main__upper">
 				<!--Блок логотипа-->
 				<div class="main__logo main-logo">
-					<a class="main-logo__link" href="index.html" target="_self">
-						<picture class="main-logo__frame main-logo__frame--event">
+					<a class="main-logo__link main-logo__link--gallery" href="index.html" target="_self">
+						<picture class="main-logo__frame main-logo__frame--event main-logo__frame--gallery">
 							<source srcset="img/film-logo.webp" type="image/webp" />
 							<img class="main-logo__image main-logo__image--event" src="img/film-logo.png" alt="Волшебный парк Джун" />
 						</picture>
@@ -322,6 +322,7 @@
 						</picture>
 						<b class="main-cabinet__name">Анатолий М.</b>
 					</div>
+					<!--Выдвигающийся список-->
 					<ul class="main-cabinet__result cabinet-result">
 						<li class="cabinet-result__item cabinet-result__item--first">
 							<!--Base image for uncaught symbol-->
@@ -338,61 +339,61 @@
 						<li class="cabinet-result__item cabinet-result__item--second">
 							<!--Base image for uncaught symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--empty">
-								<source srcset="img/empty-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								<source srcset="img/empty-2.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/empty-2.png" alt="Неопознанная панда" />
 							</picture>
 							<!--Image for correctly taken symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-								<source srcset="img/full-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								<source srcset="img/full-2.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/full-2.png" alt="Опознанная панда" />
 							</picture>
 						</li>
 						<li class="cabinet-result__item cabinet-result__item--third">
 							<!--Base image for uncaught symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--empty">
-								<source srcset="img/empty-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								<source srcset="img/empty-3.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/empty-3.png" alt="Неопознанная панда" />
 							</picture>
 							<!--Image for correctly taken symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-								<source srcset="img/full-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								<source srcset="img/full-3.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/full-3.png" alt="Опознанная панда" />
 							</picture>
 						</li>
 						<li class="cabinet-result__item cabinet-result__item--fourth">
 							<!--Base image for uncaught symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--empty">
-								<source srcset="img/empty-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								<source srcset="img/empty-4.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/empty-4.png" alt="Неопознанная панда" />
 							</picture>
 							<!--Image for correctly taken symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-								<source srcset="img/full-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								<source srcset="img/full-4.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/full-4.png" alt="Опознанная панда" />
 							</picture>
 						</li>
 						<li class="cabinet-result__item cabinet-result__item--fifth">
 							<!--Base image for uncaught symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--empty">
-								<source srcset="img/empty-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								<source srcset="img/empty-5.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/empty-5.png" alt="Неопознанная панда" />
 							</picture>
 							<!--Image for correctly taken symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-								<source srcset="img/full-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								<source srcset="img/full-5.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/full-5.png" alt="Опознанная панда" />
 							</picture>
 						</li>
 						<li class="cabinet-result__item cabinet-result__item--sixth">
 							<!--Base image for uncaught symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--empty">
-								<source srcset="img/empty-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/empty-1.png" alt="Неопознанная панда" />
+								<source srcset="img/empty-6.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/empty-6.png" alt="Неопознанная панда" />
 							</picture>
 							<!--Image for correctly taken symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-								<source srcset="img/full-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								<source srcset="img/full-6.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/full-6.png" alt="Опознанная панда" />
 							</picture>
 						</li>
 						<li class="cabinet-result__item cabinet-result__item--seventh">
@@ -403,8 +404,8 @@
 							</picture>
 							<!--Image for correctly taken symbol-->
 							<picture class="cabinet-result__frame cabinet-result__frame--full" id="symbol-1">
-								<source srcset="img/full-1.webp" type="image/webp" />
-								<img class="cabinet-result__image" src="img/full-1.png" alt="Опознанная панда" />
+								<source srcset="img/full-7.webp" type="image/webp" />
+								<img class="cabinet-result__image" src="img/full-7.png" alt="Опознанная панда" />
 							</picture>
 						</li>
 					</ul>
